--- a/test.org
+++ b/test.org
@@ -240,7 +240,7 @@ Gotta buy one first, though.
                 ((agenda "" ((org-super-agenda-groups
                               '((:name "Today"
                                        :time-grid t)
-                                (:auto-groups t)))))
+                                (:auto-group t)))))
                  (todo "" ((org-super-agenda-groups
                             '((:name "Projects"
                                      :children t)
@@ -455,7 +455,7 @@ This helps a lot.
 #+BEGIN_SRC elisp
   (with-org-today-date "2017-07-05 00:00"
     (let ((org-super-agenda-groups
-           '((:auto-groups t)))
+           '((:auto-group t)))
           (org-agenda-files (list "~/src/org-super-agenda/test.org")))
       (org-agenda-list nil nil 'day)))
 #+END_SRC
