--- a/notes.org
+++ b/notes.org
@@ -88,6 +88,13 @@ I think I can just use this instead of my own =when-with-marker-buffer=.
 
 I just discovered the =cl-seq= library, which includes =cl-subsetp=, which might be preferable over =seq-intersection= for testing membership.
 
+** MAYBE Customize interface
+:LOGBOOK:
+-  State "MAYBE"      from              [2017-08-01 Tue 05:15]
+:END:
+
+I might be able to use =org-agenda-custom-commands-local-options= as a guide.
+
 ** CANCELED Use seq
 CLOSED: [2017-07-27 Thu 02:12]
 :LOGBOOK:
