--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@ This package lets you "supercharge" your Org daily/weekly agenda.  The idea is t
 
 Now you can sort-of do this already with custom agenda commands, but when you do that, you lose the daily/weekly aspect of the agenda: items are no longer shown based on deadline/scheduled timestamps, but are shown no-matter-what.
 
-So this package overrides the =org-agenda-finalize-entries= function, which runs just before items are inserted into agenda views.  It runs them through a set of filters that separate them into groups.  Then the groups are inserted into the agenda buffer, and any remaining items are inserted at the end.  Empty groups are not displayed.
+So this package filters the results from =org-agenda-finalize-entries=, which runs just before items are inserted into agenda views.  It runs them through a set of filters that separate them into groups.  Then the groups are inserted into the agenda buffer, and any remaining items are inserted at the end.  Empty groups are not displayed.
 
 The end result is your standard daily/weekly agenda, but arranged into groups defined by you.  You might put items with certain tags in one group, habits in another group, items with certain todo keywords in another, and items with certain priorities in another.  The possibilities are only limited by the grouping functions.
 
