--- a/notes.org
+++ b/notes.org
@@ -1171,5 +1171,11 @@ CLOSED: [2017-07-28 Fri 00:02]
                            finally return (-sort (-on 'string< 'car) groups))))
       (apply 'concat (--map (format "+ =%s= %s\n" (first it) (second it))
                             groups))))
+
+  (with-current-buffer (get-buffer-create "osa/describe-groupers")
+    (erase-buffer)
+    (insert (osa/describe-groupers))
+    (pop-to-buffer (current-buffer))
+    (org-mode))
 #+END_SRC
 
