--- a/notes.org
+++ b/notes.org
@@ -206,6 +206,19 @@ I just discovered the =cl-seq= library, which includes =cl-subsetp=, which might
 
 I might be able to use =org-agenda-custom-commands-local-options= as a guide.
 
+** SOMEDAY More functional approach
+:LOGBOOK:
+-  State "SOMEDAY"    from              [2017-08-03 Thu 09:26]
+:END:
+
+Vincent Toups was kind enough to look at some of my ugly code and give me some [[https://github.com/VincentToups/destructuring-set/issues/1#issuecomment-319982708][feedback]] about using a more functional approach.  Something I'd like to move toward in the future:
+
+#+BEGIN_QUOTE
+Ha - that is some serious cl-loop work. I tend towards functional approaches, so I'd probably dispense with all the loop machinery in factor of a reduce over org-super-agenda-groups and then I'd define some pattern matching functions using shadchen's function definition forms. Or, if I wanted to put it all in one place, I'd use match or match-let. In the former case, I'd write one function body for each possible case in the loop and construct the result iteratively. Finally, I'd apply the transformations in the finally clause, probably as a function call of a locally defined function using flet.
+
+All this is a matter of taste, but I almost never setq in code I write. In this case it doesn't seem like you need to side effect for performance or memory reasons, so I'd refactor the code to be completely pure.
+#+END_QUOTE
+
 ** CANCELED Use seq
 CLOSED: [2017-07-27 Thu 02:12]
 :LOGBOOK:
