--- a/examples.org
+++ b/examples.org
@@ -7,14 +7,15 @@ There are a lot of possibilities, so here are some examples to spark your imagin
 *Note:* You can test any of these examples by evaluating the whole =let= form in Emacs (or, if you open this file in Emacs, by executing the code block with =C-c C-c=).
 
 ** Contents                                                            :TOC:
-     - [[#automatically-by-group][Automatically by group]]
-     - [[#automatically-by-category][Automatically by category]]
-     - [[#forward-looking][Forward-looking]]
-     - [[#log-mode][Log mode]]
-     - [[#concrete-dates][Concrete dates]]
-     - [[#projects][Projects]]
-     - [[#books-to-read][Books to-read]]
-     - [[#emacs-and-org-mode-to-do-items][Emacs and Org-mode to-do items]]
+    - [[#automatically-by-group][Automatically by group]]
+    - [[#automatically-by-category][Automatically by category]]
+    - [[#forward-looking][Forward-looking]]
+    - [[#log-mode][Log mode]]
+    - [[#concrete-dates][Concrete dates]]
+    - [[#projects][Projects]]
+    - [[#books-to-read][Books to-read]]
+    - [[#emacs-and-org-mode-to-do-items][Emacs and Org-mode to-do items]]
+    - [[#contributed-examples][Contributed examples]]
 
 ** Automatically by group
 
@@ -250,4 +251,24 @@ This shows all to-do items with the =:Emacs:= tag, and groups together anything 
                   :regexp ("org-mode"
                            ,(rx bow "org" eow))))))
     (org-tags-view t "Emacs"))
+#+END_SRC
+
+** Contributed examples
+
+*** [[https://github.com/bascht][Sebastian Schulze]]
+
+[[screenshots/bascht.png]]
+
+#+BEGIN_SRC elisp
+  (org-super-agenda-groups
+   '((:name "Next Items"
+            :time-grid t
+            :tag ("NEXT" "outbox"))
+     (:name "Important"
+            :priority "A")
+     (:name "Quick Picks"
+            :effort< "0:30")
+     (:priority<= "B"
+                  :scheduled future
+                  :order 1)))
 #+END_SRC
