--- a/examples.org
+++ b/examples.org
@@ -140,7 +140,7 @@ What if you wanted to group tasks that are due before the end of the current mon
           (last-day-of-month (calendar-last-day-of-month month year))
           (target-date
            ;; A hack that seems to work fine.  Yay, Postel!
-           (1+ (format "%d-%02d-%02d" year month last-day-of-month)))
+           (format "%d-%02d-%02d" year month (1+ last-day-of-month)))
           (org-super-agenda-groups
            `((:deadline (before ,target-date))
              (:discard (:anything t)))))
